--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "html-react-parser": "^5.1.16",
     "next": "14.2.12",
     "pg": "^8.13.0",
     "react": "^18",
