--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "postcss": "^8",
