--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "formidable": "^3.5.1",
     "html-react-parser": "^5.1.16",
     "next": "14.2.12",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
